--- a/access_pass/templates/sign_nda.html
+++ b/access_pass/templates/sign_nda.html
@@ -8,7 +8,7 @@
 {% block content %}
 <!-- ======= Hero Section ======= -->
 
-<div class="container" style="margin-top: 90px; min-height: 80vh; max-width: 70%">
+<div class="container" style="max-width: 90%">
 	<p>{{ reason_for_visit_data }}</p>
 	<p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 	<form method="post" class="form hero">
@@ -283,7 +283,7 @@
 
 					<div class="col-4">
 						<button type="submit" class="btn btn-primary btn-lg btn-block bg-dark">
-							Agree
+							Agree & Submit
 						</button>
 					</div>
 				</div>
