--- a/access_pass/templates/access_forms.html
+++ b/access_pass/templates/access_forms.html
@@ -9,13 +9,13 @@
 {% endblock %}
 
 {% block content %}
-<div class="container" style="margin-top: 90px; min-height: 80vh; max-width: 70%;">
+<div class="container" style="max-width: 80%;">
     <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
     <form method="post">{% csrf_token %}
         {{wizard.management_form}}
         {{ wizard.form.non_field_errors }}
 
-        <div class="row">
+        <div class="row g-3">
             <div class="col-6">
                 {{wizard.form.full_name.errors}}
                 {{wizard.form.full_name|as_crispy_field}}
@@ -52,11 +52,11 @@
             <div class="col-12">
                 <div class="alert alert-info" role="alert">
                     <p>
-                        Do you have people accompanying you? Please fill this form below.
+                        If you have people accompanying you, please click the "Add More" button below.
                     </p>
                 </div>
 
-                <div id="attendee-cont" class="col-12">
+                <div id="attendee-cont" class="col-12 m-3">
                     <!-- <div class="form-row">
                         <div class="form-group col-md-3">
                             <label for="fullname[]">Full Name</label>
@@ -129,11 +129,14 @@
     let i = 1;
     document.getElementById("addMore").onclick = () => {
         const template = `
+                    <div class="form-group col-1">
+                        ${i}
+                    </div>
                     <div class="form-group col-4">
                         <label for="fullname">Full Name</label>
                         <input type="text" class="form-control" name="fullname" id="fullname" placeholder="Full Name">
                     </div>
-                    <div class="form-group col-4">
+                    <div class="form-group col-3">
                     <label for="id_no">ID Number</label>
                     <input type="number" class="form-control" name="id_no" id="id_no" placeholder="ID No">
                     </div>
@@ -144,7 +147,7 @@
             `;
         let container = document.getElementById("attendee-cont");
         let div = document.createElement("div");
-        div.className = "col-12 row m-1";
+        div.className = "col-12 row mt-4";
         div.innerHTML = template;
         container.append(div);
         i++;
