--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -67,9 +67,9 @@
                     {% if user.is_authenticated %}
 <!--                    notification count-->
                     <!-- <li><a class="nav-link scrollto" href="{% url 'applicants' %}"><i class="bi bi-bell" style="font-size:20px; font-style:normal;">{% if notifications > 0 %} {{ notifications }} {% endif %}</i></a></li> -->
-                    <li><a class="nav-link scrollto" href="{% url 'applicants' %}">{% if notifications > 0 %} <i class="bi bi-bell" style="font-size:20px; font-style:normal;">{{ notifications}} </i> {% endif %} &nbsp;  Requests</a></li>
+                    <li><a class="nav-link scrollto" href="/applicants/pending">{% if notifications > 0 %} <i class="bi bi-bell" style="font-size:20px; font-style:normal;">{{ notifications}} </i> {% endif %} &nbsp;Requests</a></li>
                     <!-- user icon -->
-                    <li><a class="nav-link scrollto" href="#"><i class="bi bi-person" style="font-size:20px;"></i></a></li>
+                    <li><a class="nav-link scrollto" href="#">{{request.user}}</a></li>
                     <li><a class="nav-link scrollto" href="{% url 'signout' %}">Logout</a></li>
                     {% else %}
                     <li><a class="nav-link" href="{% url 'signin' %}">Admin</a></li>
