--- a/access_pass/templates/visit_request.html
+++ b/access_pass/templates/visit_request.html
@@ -7,12 +7,13 @@
             <div class="card">
                 <div class="card-header d-flex justify-content-between">
                     <h4>Access Request</h4>
+                    <a href="{% url 'print' visit.id %}" target="_blank" class="btn btn-primary btn-dark">Print</a>
                     <a href="{% url 'applicants' %}" class="btn btn-primary bg-dark">Back</a>
                 </div>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-12">
-                            <h5>Visit Details</h5>
+                            <h5>Request Details</h5>
                             <table class="table mt-3">
                                 <tr>
                                     <td><strong>Requested Time of Visit:</strong></td>
