fix: View NDA buttton label

--- a/access_pass/templates/visit_request.html
+++ b/access_pass/templates/visit_request.html
@@ -7,7 +7,7 @@
             <div class="card">
                 <div class="card-header d-flex justify-content-between">
                     <h4>Access Request</h4>
-                    <a href="{% url 'print' visit.id %}" target="_blank" class="btn btn-primary btn-dark">Print</a>
+                    <a href="{% url 'print' visit.id %}" target="_blank" class="btn btn-primary btn-dark">NDA</a>
                     <a href="{% url 'applicants' %}" class="btn btn-primary bg-dark">Back</a>
                 </div>
                 <div class="card-body">
