--- a/access_pass/templates/dc_rules.html
+++ b/access_pass/templates/dc_rules.html
@@ -16,7 +16,7 @@
         {{ wizard.management_form }}
         <!-- {{ form|crispy }} -->
         <div class="container min-vh-100">
-            <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold" style="font-size: 30px; color: #939393; font-weight: bolder;">
+            <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold" style="font-size: 45px; color: #000; font-weight: bolder;">
                 DC Rules
             </div>
             <div class="p-10 w-70">
@@ -63,7 +63,7 @@
                     </div> -->
 
                     <div class="col-4">
-                        <button type="submit" class="btn btn-primary btn-lg btn-block bg-dark form-button">Agree</button>
+                        <button type="submit" class="btn-all">Agree</button>
                     </div>
                 </div>
             </div>
