--- a/access_pass/static/main/assets/css/style.css
+++ b/access_pass/static/main/assets/css/style.css
@@ -124,7 +124,7 @@ h6 {
 }
 
 #header .logo img {
-	max-height: 40px;
+	max-height: 60px;
 	background-color: #fff;
 	padding: 5px;
 	border-radius: 2px;
@@ -977,4 +977,34 @@ i:hover {
 	border: #111820 3px solid;
 	color: #fff;
 	border-radius: 50px;
+}
+
+/*--------------------------------------------------------------
+# Buttons
+--------------------------------------------------------------*/
+
+.btn-all {
+	font-family: "Jost", sans-serif;
+	font-weight: 500;
+	font-size: 16px;
+	letter-spacing: 1px;
+	display: inline-block;
+	padding: 10px 28px 11px 28px;
+	border-radius: 50px;
+	margin: 10px 0 10px 0;
+	border: #111820 3px solid;
+	color: #fff;
+	background: #111820;
+}
+
+.btn-all:focus {
+	background: #ff0013;
+	border-color: #111820;
+	color: #fff;
+}
+
+.btn-all:hover {
+	background: #ff0013;
+	border-color: #111820;
+	color: #fff;
 }
