--- a/access_pass/templates/base.html
+++ b/access_pass/templates/base.html
@@ -72,7 +72,7 @@
                     <li><a class="nav-link scrollto" href="#">{{request.user}}</a></li>
                     <li><a class="nav-link scrollto" href="{% url 'signout' %}">Logout</a></li>
                     {% else %}
-                    <li><a class="nav-link" href="{% url 'signin' %}">Admin</a></li>
+                    <li><a class="nav-link" href="{% url 'signin' %}">ADMIN</a></li>
                     {% endif %}
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
