--- a/access_pass/templates/sign_nda.html
+++ b/access_pass/templates/sign_nda.html
@@ -277,11 +277,11 @@
 			<div class="container-fluid">
 				<div class="row justify-content-around p-3">
 					<div class="col-4">
-						<a href="/" class="btn btn-danger btn-lg btn-block bg-danger">Disagree</a>
+						<a href="/" class="btn-all">Disagree</a>
 					</div>
 
 					<div class="col-4">
-						<button type="submit" class="btn btn-primary btn-lg btn-block bg-dark">
+						<button type="submit" class="btn-all">
 							Agree & Submit
 						</button>
 					</div>
