--- a/access_pass/templates/home.html
+++ b/access_pass/templates/home.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
                 data-aos="fade-up" data-aos-delay="200">
-                <h1>KRA Data Center Visitor Access 🔏</h1>
+                <h1>KRA Data Center Access 🔏</h1>
                 <div class="d-flex justify-content-center justify-content-lg-start">
                     <a href="/access_form/" class="btn-get-started">Request Primary DC Access</a>
                 </div>
