--- a/access_pass/static/main/assets/css/style.css
+++ b/access_pass/static/main/assets/css/style.css
@@ -125,7 +125,6 @@ h6 {
 
 #header .logo img {
 	max-height: 60px;
-	background-color: #fff;
 	padding: 5px;
 	border-radius: 2px;
 }
@@ -156,7 +155,6 @@ h6 {
 .navbar a:focus {
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 	padding: 10px 0 10px 30px;
 	font-size: 15px;
 	font-weight: 500;
@@ -1007,4 +1005,16 @@ i:hover {
 	background: #ff0013;
 	border-color: #111820;
 	color: #fff;
+}
+
+/*--------------------------------------------------------------
+# Media Queries
+--------------------------------------------------------------*/
+
+/* Portrait and Landscape */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 4) {
+
 }
