Added "Equipment to be authorized" to the access form

--- a/access_pass/templates/access_forms.html
+++ b/access_pass/templates/access_forms.html
@@ -39,6 +39,10 @@
                 {{wizard.form.organization_department.errors}}
                 {{wizard.form.organization_department|as_crispy_field}}
             </div>
+            <div class="col-12">
+                {{wizard.form.equipment_to_be_authorized.errors}}
+                {{wizard.form.equipment_to_be_authorized|as_crispy_field}}
+            </div>
             <div class="col-6">
                 {{wizard.form.date_of_visit.errors}}
                 {{wizard.form.date_of_visit|as_crispy_field}}
