--- a/access_pass/templates/visit_request.html
+++ b/access_pass/templates/visit_request.html
@@ -99,6 +99,10 @@
                                     <td><strong>Department/Organization:</strong></td>
                                     <td>{{ person.organization_department }}</td>
                                 </tr>
+                                <tr>
+                                    <td><strong>Equipment to be authorized:</strong></td>
+                                    <td>{{ person.equipment_to_be_authorized }}</td>
+                                </tr>
                                 {% endif %}
                             </table>
                         </div>
